--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ plugins:
 # -----------------------------------------------------------------------------
 scholar:
   style: assets/csl/apa-no-doi.csl
+  apashort: "Doe, A."
   source: ./_bibliography
   bibliography: publications.bib
   sort_by: year
